<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_prompt"
        android:layout_below="@+id/login_prompt"
        android:layout_marginTop="23dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="23dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <EditText
       android:id="@+id/username_field"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/password"
       android:layout_toRightOf="@+id/username"
       android:ems="10"
       android:inputType="text"
       android:hint="@string/user_prompt">
       <requestFocus />
   </EditText>

   <EditText
       android:id="@+id/password_field"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/password"
       android:layout_alignLeft="@+id/username_field"
       android:ems="10"
       android:inputType="textPassword" />

   <Button
       android:id="@+id/login"
       android:onClick="onLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerVertical="true"
       android:layout_toLeftOf="@+id/password_field"
       android:text="@string/login_button" />

   <Button
       android:id="@+id/add_user"
       android:onClick="onAdd"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/login"
       android:layout_alignBottom="@+id/login"
       android:layout_alignRight="@+id/password_field"
       android:layout_marginRight="49dp"
       android:text="@string/add_button" />

</RelativeLayout>